--- a/electron/launcher/src/App.scss
+++ b/electron/launcher/src/App.scss
@@ -1,16 +1,22 @@
-*{
-  box-sizing: border-box;
-}
-html, body {
-  font-size: 16px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-body{
-  // background: url('../src/assets/maplestory-background.png') no-repeat fixed center;
-  margin: 0;
-}
-.container {
+.App {
   text-align: center;
 }
 
+.App-logo {
+  height: 40vmin;
+}
 
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #09d3ac;
+}
