--- a/electron/launcher/src/App.scss
+++ b/electron/launcher/src/App.scss
@@ -74,9 +74,9 @@ html, body {
 }
 body{
   margin: 0;
+
 }
 h1{
-  
   font-size: 2.25rem;
   font-weight: bold;
   font-style: normal;
@@ -92,11 +92,41 @@ h1{
     }
   }
 }
+
 .hero-image{
   background: url('../src/assets/dietstory_login_background.png') no-repeat center;
   background-size: cover;
-  min-height: 578px;
+  min-height: 567px;
   padding: 1.5rem 3rem !important;
 }
 
+.app-container{
+  &--loggedin{
+    background: url('../src/assets/main_background.png') no-repeat center;
+    background-size: cover;
+    min-height: 567px;
+  }
+}
 
+.main-header{
+  background-color: white;
+  border-bottom: 2px solid #F7943A;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.24);
+  padding: 1rem 1rem;
+  font-size: 1.125rem;
+  align-items: center;
+  * {
+    margin: 0 0.5rem;
+  }
+  &__link{
+    color: #B2B2B2;
+    &--active{
+      color: #4A4A4A;
+    }
+  } 
+}
+
+.play-button{
+  width: 144px;
+  box-shadow: 0 2px 6px 0 rgba(0,0,0,0.5);
+}
