--- a/electron/launcher/src/App.scss
+++ b/electron/launcher/src/App.scss
@@ -1,47 +1,3 @@
-// Klavika font faces
-@font-face {
-  font-family: 'Klavika';
-  src: url('./assets/fonts/klavika/KlavikaRegular-TF.otf') format('opentype');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Klavika';
-  src: url('./assets/fonts/klavika/KlavikaMedium-Italic.otf') format('opentype');
-  font-style: italic;
-  font-weight: 500;
-}
-@font-face {
-  font-family: 'Klavika';
-  src: url('./assets/fonts/klavika/KlavikaMedium.otf') format('opentype');
-  font-style: normal;
-  font-weight: 500;
-}
-@font-face {
-  font-family: 'Klavika';
-  src: url('./assets/fonts/klavika/KlavikaLight-Italic.otf') format('opentype');
-  font-style: italic;
-  font-weight: 200;
-}
-@font-face {
-  font-family: 'Klavika';
-  src: url('./assets/fonts/klavika/KlavikaLight.otf') format('opentype');
-  font-style: normal;
-  font-weight: 200;
-}
-@font-face {
-  font-family: 'Klavika';
-  src: url('./assets/fonts/klavika/KlavikaBold.otf') format('opentype');
-  font-style: normal;
-  font-weight: 700;
-}
-@font-face {
-  font-family: 'Klavika';
-  src: url('./assets/fonts/klavika/KlavikaBold-Italic.otf') format('opentype');
-  font-style: italic;
-  font-weight: 700;
-}
-
 // Avenir Next font faces
 @font-face {
   font-family: 'Avenir Next';
@@ -129,4 +85,22 @@ h1{
 .play-button{
   width: 144px;
   box-shadow: 0 2px 6px 0 rgba(0,0,0,0.5);
+}
+
+.patcher{
+  background-color: white;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  position: fixed;
+  padding: 1rem 2rem;
+  border-top: 2px solid #F7943A;
+}
+
+.progress{
+  border-radius: 20px;
+  height: 2rem;
+  border: 1px solid #979797;
+  font-weight: 300;
+  font-size: 1.5rem;
 }
