--- a/electron/launcher/src/App.scss
+++ b/electron/launcher/src/App.scss
@@ -98,6 +98,9 @@ h1{
   border-radius: 10px;
   border: 5px solid #1f8637;
   // box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
+  &.disabled{
+    cursor: default;
+  }
 }
 
 .patcher{
