--- a/electron/launcher/src/App.scss
+++ b/electron/launcher/src/App.scss
@@ -124,7 +124,8 @@ h1{
 .hero-card {
  background-color: white;
  border: 2px solid #F7943A;
- margin: 1rem 0 0 1rem;
+ padding: 2rem;
+ margin-top: 2rem;
  box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
 }
 .profile{
