--- a/electron/launcher/src/App.scss
+++ b/electron/launcher/src/App.scss
@@ -68,6 +68,9 @@ h1{
 }
 
 .main-header{
+  position: fixed;
+  width: 100%;
+  z-index: 98;
   background-color: white;
   border-bottom: 2px solid #F7943A;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.24);
@@ -186,4 +189,49 @@ h1{
 
 .btn-resend{
   margin-bottom: 2rem;
+}
+
+.dropzone {
+  background-color: #D9F4FD;
+  border: 1px solid #6CD6F8;
+  text-align: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  // height: 500px;
+}
+
+.form-step {
+  background-color:white;
+  -webkit-appearance: none;
+  position:relative;
+  // &:after {
+  //   content: '';
+  //   position: absolute;
+  //   width: 24px;
+  //   height: 28px;
+  //   top: 0;
+  //   // bottom: 0;
+  //   right: -32px;
+  //   border-top: 14px solid transparent;
+	//   border-left: 32px solid white;
+	//   border-bottom: 14px solid transparent;
+  //   // transform: rotate(45deg);
+  // }
+  // &:before {
+  //   content: '';
+  //   position: absolute;
+  //   width: 24px;
+  //   height: 28px;
+  //   top: 0;
+  //   // bottom: 0;
+  //   left: -32px;
+  //   border-top: 14px solid white;
+	//   border-left: 32px solid transparent;
+	//   border-bottom: 14px solid white;
+  //   // transform: rotate(45deg);
+  // }  
+}
+
+.container{
+  padding-top: 128px;
 }
