--- a/electron/launcher/src/App.scss
+++ b/electron/launcher/src/App.scss
@@ -235,3 +235,14 @@ h1{
 .container{
   padding-top: 128px;
 }
+
+.file-inputs{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  input {
+    border: 1px solid #66AFE9;
+  }
+}
+
+// if currentstep - 1 is not 0, show prev step button
+// if currentStep + 1
