--- a/electron/launcher/src/App.scss
+++ b/electron/launcher/src/App.scss
@@ -244,5 +244,10 @@ h1{
   }
 }
 
+.uploader-ver-input{
+  margin-left: 0;
+  margin-right: 0;
+}
+
 // if currentstep - 1 is not 0, show prev step button
 // if currentStep + 1
