--- a/electron/launcher/src/App.scss
+++ b/electron/launcher/src/App.scss
@@ -147,7 +147,7 @@ h1{
  background-color: white;
  border: 2px solid #F7943A;
  padding: 2rem;
- margin-top: 2rem;
+ margin-top: 1.5rem;
  box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
 }
 .profile{
@@ -214,3 +214,16 @@ h1{
   color: #bb0000;
 }
 
+.spinner-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  opacity: 0.5;
+  z-index: 99;
+  // top:0;
+  // left:0;
+}
